src/pcgnslib.h

typedef enum {
    CGP_INDEPENDENT=0,
    CGP_COLLECTIVE=1,
} CGNS_ENUMT( PIOmode_t );
CGNSDLL int cgp_close(int fn);
CGNSDLL int cgp_elements_write_data(int fn, int B, int Z, int S,
    cgsize_t start, cgsize_t end, const cgsize_t *elements);
CGNSDLL int cgp_elements_read_data(int fn, int B, int Z, int S,
    cgsize_t start, cgsize_t end, cgsize_t *elements);
CGNSDLL int cgp_array_write(const char *arrayname,
    CGNS_ENUMT(DataType_t) type, int DataDimension,
    const cgsize_t *DimensionVector, int *A);
CGNSDLL int cgp_array_write_data(int A, const cgsize_t *rmin,
    const cgsize_t *rmax, const void *data);
CGNSDLL int cgp_array_read_data(int A, const cgsize_t *rmin,
    const cgsize_t *rmax, void *data);
CGNSDLL void cgp_error_exit(void);