src/cgns_f.F90


        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_array_write(arrayname,itype,DataDimension,DimensionVector,A) BIND(C, name='cgp_array_write')
             USE ISO_C_BINDING
             IMPORT :: cgsize_t
             CHARACTER(C_CHAR), DIMENSION(*), INTENT(IN)  :: arrayname
             INTEGER(C_INT)   , INTENT(IN), VALUE :: itype
             INTEGER(C_INT)   , INTENT(IN), VALUE :: DataDimension
             INTEGER(CGSIZE_T), DIMENSION(1:DataDimension), INTENT(IN) :: DimensionVector
             INTEGER(C_INT)   , INTENT(OUT) :: A
           END FUNCTION cgp_array_write
        END INTERFACE
        
        
        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_array_write_data(A, rmin, rmax, data) BIND(C, name='cgp_array_write_data')
             USE ISO_C_BINDING
             IMPORT :: cgsize_t
             INTEGER(C_INT)   , INTENT(IN), VALUE :: A
             INTEGER(CGSIZE_T), INTENT(IN) :: rmin
             INTEGER(CGSIZE_T), INTENT(IN) :: rmax
             TYPE(C_PTR), VALUE :: data
           END FUNCTION cgp_array_write_data
        END INTERFACE
        
        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_elements_write_data(fn,B,Z,S,emin,emax,elements) BIND(C, name='cgp_elements_write_data')
             USE ISO_C_BINDING
             IMPORT :: cgsize_t
             INTEGER(C_INT)   , INTENT(IN), VALUE :: fn
             INTEGER(C_INT)   , INTENT(IN), VALUE :: B
             INTEGER(C_INT)   , INTENT(IN), VALUE :: Z
             INTEGER(C_INT)   , INTENT(IN), VALUE :: S
             INTEGER(CGSIZE_T), INTENT(IN), VALUE :: emin
             INTEGER(CGSIZE_T), INTENT(IN), VALUE :: emax
             TYPE(C_PTR), VALUE :: elements
           END FUNCTION cgp_elements_write_data
        END INTERFACE
        
        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_elements_read_data(fn,B,Z,S,start,end,elements) BIND(C, name='cgp_elements_read_data')
             USE ISO_C_BINDING
             IMPORT :: cgsize_t
             INTEGER(C_INT)   , INTENT(IN), VALUE :: fn
             INTEGER(C_INT)   , INTENT(IN), VALUE :: B
             INTEGER(C_INT)   , INTENT(IN), VALUE :: Z
             INTEGER(C_INT)   , INTENT(IN), VALUE :: S
             INTEGER(CGSIZE_T), INTENT(IN), VALUE :: start
             INTEGER(CGSIZE_T), INTENT(IN), VALUE :: end
             TYPE(C_PTR), VALUE :: elements
           END FUNCTION cgp_elements_read_data
        END INTERFACE
        
        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_array_read_data(A, rmin, rmax, data) BIND(C, name='cgp_array_read_data')
             USE ISO_C_BINDING
             IMPORT :: cgsize_t
             INTEGER(C_INT)   , INTENT(IN), VALUE :: A
             INTEGER(CGSIZE_T), INTENT(IN) :: rmin
             INTEGER(CGSIZE_T), INTENT(IN) :: rmax
             TYPE(C_PTR), VALUE :: data
           END FUNCTION cgp_array_read_data
        END INTERFACE
        
        INTERFACE     
           INTEGER(C_INT) FUNCTION cg_sol_write(fn,B,Z,solname,location,S) BIND(C, name='cg_sol_write')
             USE ISO_C_BINDING
             INTEGER(C_INT)   , INTENT(IN), VALUE :: fn
             INTEGER(C_INT)   , INTENT(IN), VALUE :: B
             INTEGER(C_INT)   , INTENT(IN), VALUE :: Z
             CHARACTER(C_CHAR), DIMENSION(*), INTENT(IN) :: solname
             INTEGER(C_INT)   , INTENT(IN), VALUE :: location
             INTEGER(C_INT)   , INTENT(OUT) :: S
           END FUNCTION cg_sol_write
        END INTERFACE

        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_error_exit() BIND(C, name='cgp_error_exit')
             USE ISO_C_BINDING
           END FUNCTION cgp_error_exit
        END INTERFACE

        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_close(fn) BIND(C, name='cgp_close')
             USE ISO_C_BINDING
             INTEGER(C_INT), INTENT(IN), VALUE :: fn
           END FUNCTION cgp_close
        END INTERFACE

        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_queue_set(use_queue) BIND(C, name='cgp_queue_set')
             USE ISO_C_BINDING
             INTEGER(C_INT), INTENT(IN), VALUE :: use_queue
           END FUNCTION cgp_queue_set
        END INTERFACE

        INTERFACE     
           INTEGER(C_INT) FUNCTION cgp_queue_flush() BIND(C, name='cgp_queue_flush')
             USE ISO_C_BINDING
           END FUNCTION cgp_queue_flush
        END INTERFACE

        INTERFACE     
           INTEGER(C_INT) FUNCTION cg_user_data_write(UserDataName) BIND(C, name='cg_user_data_write')
             USE ISO_C_BINDING
             CHARACTER(C_CHAR), DIMENSION(*), INTENT(IN) :: UserDataName
           END FUNCTION cg_user_data_write
        END INTERFACE

#if HAVE_FORTRAN_2008TS
        ! THE FOLLOWING CODE ONLY WORKS FOR COMPILERS HAVING F2008 STANDARD EXTENSION:
        ! TS 29113 Further Interoperability of FORTRAN with C WG5/N1942

        ! The number of optional parameters should be set to
        ! CG_MAX_GOTO_DEPTH, which is currently set to 20.
        INTERFACE
           INTEGER(C_INT) FUNCTION cg_gorel(fn, &
                UserDataName1, i1, UserDataName2, i2, &
                UserDataName3, i3, UserDataName4, i4, &
                UserDataName5, i5, UserDataName6, i6, &
                UserDataName7, i7, UserDataName8, i8, &
                UserDataName9, i9, UserDataName10, i10, &
                UserDataName11, i11, UserDataName12, i12, &
                UserDataName13, i13, UserDataName14, i14, &
                UserDataName15, i15, UserDataName16, i16, &
                UserDataName17, i17, UserDataName18, i18, &
                UserDataName19, i19, UserDataName20, i20, &
                end) BIND(C, name='cg_gorel_f08')

             USE ISO_C_BINDING
             INTEGER(C_INT) , INTENT(IN), VALUE :: fn
             CHARACTER(C_CHAR), DIMENSION(*), INTENT(IN), OPTIONAL :: UserDataName1,UserDataName2, &
                  UserDataName3,UserDataName4,UserDataName5,UserDataName6,UserDataName7,UserDataName8, &
                  UserDataName9,UserDataName10,UserDataName11,UserDataName12,UserDataName13,UserDataName14, &
                  UserDataName15,UserDataName16,UserDataName17,UserDataName18,UserDataName19,UserDataName20

             INTEGER(C_INT), INTENT(IN), OPTIONAL :: i1,i2,i3,i4,i5,i6,i7,i8,i9,i10,i11,i12,i13,i14,i15,i16, &
                  i17, i18, i19, i20
             CHARACTER(C_CHAR), DIMENSION(*), INTENT(IN), OPTIONAL :: end
           END FUNCTION cg_gorel
        END INTERFACE

        ! The number of optional parameters should be set to
        ! CG_MAX_GOTO_DEPTH, which is currently set to 20.

        INTERFACE
           INTEGER(C_INT) FUNCTION cg_goto(fn, B, &
                UserDataName1, i1, UserDataName2, i2, &
                UserDataName3, i3, UserDataName4, i4, &
                UserDataName5, i5, UserDataName6, i6, &
                UserDataName7, i7, UserDataName8, i8, &
                UserDataName9, i9, UserDataName10, i10, &
                UserDataName11, i11, UserDataName12, i12, &
                UserDataName13, i13, UserDataName14, i14, &
                UserDataName15, i15, UserDataName16, i16, &
                UserDataName17, i17, UserDataName18, i18, &
                UserDataName19, i19, UserDataName20, i20, &
                end) BIND(C, name='cg_goto_f08')

             USE ISO_C_BINDING
             INTEGER(C_INT) , INTENT(IN), VALUE :: fn
             INTEGER(C_INT) , INTENT(IN), VALUE :: B
             CHARACTER(C_CHAR), DIMENSION(*), INTENT(IN), OPTIONAL :: UserDataName1,UserDataName2, &
                  UserDataName3,UserDataName4,UserDataName5,UserDataName6,UserDataName7,UserDataName8, &
                  UserDataName9,UserDataName10,UserDataName11,UserDataName12,UserDataName13,UserDataName14, &
                  UserDataName15,UserDataName16,UserDataName17,UserDataName18,UserDataName19,UserDataName20
             INTEGER(C_INT), INTENT(IN), OPTIONAL :: i1,i2,i3,i4,i5,i6,i7,i8,i9,i10,i11,i12,i13,i14,i15,i16, &
                  i17, i18, i19, i20
             CHARACTER(C_CHAR), DIMENSION(*), INTENT(IN), OPTIONAL :: end
           END FUNCTION cg_goto
        END INTERFACE

#endif


      END MODULE cgns
